# ggj2024

./: .gitignore  CMakeLists.txt  README.md  i18n-compile.sh  i18n-query.sh  i18n-update.sh  xmake.lua
.github/workflows/: build.yml
code/: check.cc  config.h.in  generate.cc  level.cc  main.cc
code/bits/: AudioController.cc  AudioController.h  AudioManager.cc  AudioManager.h  Body.cc  Body.h  CommonScene.cc  CommonScene.h  Constants.h  ConstraintListScene.cc  ConstraintListScene.h  DebriefEntity.cc  DebriefEntity.h  DebriefScene.cc  DebriefScene.h  FeedbackEntity.cc  FeedbackEntity.h  FilmData.cc  FilmData.h  GameData.cc  GameData.h  GameHub.cc  GameHub.h  GameOverEntity.cc  GameOverEntity.h  GameOverScene.cc  GameOverScene.h  GameState.cc  GameState.h  HeroEntity.cc  HeroEntity.h  HeroState.h  IconWidget.cc  IconWidget.h  MapEntity.cc  MapEntity.h  MapState.cc  MapState.h  MovieData.cc  MovieData.h  (+24 more)
data/MidnightMovies/: database.json
data/raw/: montage.sh  posters-placeholder.sh
data/raw/i18n/: MidnightMovies.pot  fr.gmo  fr.po
data/raw/i18n/fr/LC_MESSAGES/: MidnightMovies.mo
